# HoloViz-MCP-Server

./: .gitignore  AGENTS.md  README.md  mrve.py  pixi.toml  pyproject.toml  smithery.yaml
.cursor/: mcp.json
.github/workflows/: publish.yml
demos/: DEMO_SCRIPT.md
src/holoviz_mcp_app/: __init__.py  cli.py  config.py
src/holoviz_mcp_app/core/: __init__.py  hv.py  pn.py  skills.py
src/holoviz_mcp_app/display/: app.py  client.py  database.py  endpoints.py  manager.py
src/holoviz_mcp_app/display/pages/: __init__.py  add_page.py  admin_page.py  feed_page.py  view_page.py
src/holoviz_mcp_app/guided/: __init__.py  codegen.py  server.py
src/holoviz_mcp_app/server/: __init__.py  compose.py  holoviews_mcp.py  hvplot_mcp.py  main.py  panel_mcp.py
src/holoviz_mcp_app/skills/data/: SKILL.md
src/holoviz_mcp_app/skills/param/: SKILL.md
src/holoviz_mcp_app/templates/: dashboard.html  multi.html  show.html  stream.html
src/holoviz_mcp_server/: __init__.py  analysis.py  chart_builders.py  cli.py  config.py  platform.py  themes.py  utils.py  validation.py
src/holoviz_mcp_server/display/: __init__.py  app.py  client.py  database.py  endpoints.py  manager.py
src/holoviz_mcp_server/display/pages/: __init__.py  add_page.py  admin_page.py  feed_page.py  view_page.py
src/holoviz_mcp_server/introspection/: holoviews.py  hvplot.py  panel.py  skills.py
src/holoviz_mcp_server/server/: _chart_builders.py  _data_sources.py  _helpers.py  compose.py  guided_mcp.py  holoviews_mcp.py  hvplot_mcp.py  main.py  panel_mcp.py
src/holoviz_mcp_server/skills/charting/: SKILL.md
src/holoviz_mcp_server/skills/holoviews/: SKILL.md
src/holoviz_mcp_server/skills/hvplot/: SKILL.md
src/holoviz_mcp_server/skills/panel/: SKILL.md
src/holoviz_mcp_server/templates/: dashboard.html  multi.html  show.html  stream.html
tests/: conftest.py  test_codegen.py  test_config.py  test_skills.py  test_utils.py  test_validation.py
